# dns-check

./: pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/: main.py
