[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-check"  # اسم پکیج خود را اینجا وارد کنید
dynamic = ["version", "scripts", "dependencies", "classifiers", "authors"]

# اضافه کردن metadata به صورت مستقیم
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

authors = [
    { name = "hesami" }
]

[tool.setuptools_scm]